# repepo

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
cluster/: devbox.yaml  launch_llama3_persona_generalization.py  launch_llama3_steering.py  runner.yaml  storage.yaml
examples/: causal_lm.py  train_model_sft.py  translators.ipynb
notebooks/: caa.ipynb  pythia-end-to-end.ipynb  tqa_mc1.ipynb
raw_datasets/: README.md  agree_disagree_raw.json
raw_datasets/bats/: metadata.json
raw_datasets/caa/: generate_dataset.json  test_dataset.json
repepo/: environ.py  variables.py
repepo/algorithms/: base.py  callback.py  icl.py  repe.py  sft.py  utils.py
repepo/baselines/: README.md
repepo/benchmarks/: tqa_mc1.py
repepo/core/: __init__.py  benchmark.py  conversation_wrapper.py  evaluate.py  format.py  hook.py  pipeline.py  prompt.py  types.py
repepo/data/: Makefile  __init__.py  dataset.py  io.py  make_dataset.py  utils.py
repepo/datasets/: __init__.py
repepo/experiments/: .gitignore  README.md  ablate_random_steering_vector.ipynb  analyse_individual_examples.ipynb  analyse_steering_across_concepts.ipynb  analyse_steering_across_contexts.ipynb  analysis_tqa_english.ipynb  constants.py  cross_steering_result_db.py  effect_of_sample_size.ipynb  evaluate_base_propensity.ipynb  evaluate_concept_interference.ipynb  evaluate_steering_efficiency_across_datasets.ipynb  evaluate_steering_efficiency_across_datasets_layers.ipynb  evaluate_tqa_caa.py  get_datasets.py  inspect_results.ipynb  make_db.py  persona_generalization.py  persona_prompts.py  plot_layerwise_metrics.ipynb  plot_multiple_results.py  plot_results.py  plot_steering_efficiency.ipynb  random_steering_vector.py  run_experiment.py  run_sweep.py  run_sweep_persona.py  steering_token_concepts.ipynb  sweep_gemma2_2b_layers.py  sweep_llama2_7b_layers.py  sweep_llama3_70b_layers.py  sweep_qwen_14b_layers.py
repepo/experiments_2/: .gitignore  README.md  anthropic_dataset_names.txt  config.py  download_datasets.py  evaluate_concept_vectors.py  extract_activations.py  extract_concept_vectors.py  inspect_activations.ipynb  inspect_concept_vectors copy.ipynb  inspect_concept_vectors.ipynb  inspect_datasets.ipynb  inspect_results.ipynb  run.sh  train_steering_vectors.py  translate.py
repepo/metrics/: generation.py
repepo/notebooks/: ablate_aggregation_method.ipynb  ablate_aggregator.ipynb  choose_steerability_metric.ipynb  concept_erasure.ipynb  download_models.py  evaluate_generalization.ipynb  evaluate_generalization.py  evaluate_generation.py  evaluate_steerability.ipynb  evaluate_steering_efficiency.ipynb  examples_of_concepts.ipynb  generative_metrics.ipynb  hf_datasets.ipynb  in_distribution_steerability.ipynb  metrics.ipynb  (+5 more)
requirements/: dev.in  dev.txt  main.in  main.txt
scripts/: persona_generalization.qsub.sh  persona_generalization_ablate.qsub.sh  persona_generalization_gemma.qsub.sh  persona_generalization_qwen.qsub.sh  persona_generalization_qwen_ablate.qsub.sh
steering_vectors/: __init__.py  layer_matching.py  record_activations.py  steering_vector.py  train_steering_vector.py
tests/: conftest.py  test_variables.py
(+351 files in other folders)
