[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repepo"
version = "0.1.0"
authors = [
  { name = "Daniel C.H. Tan", email = "dtch1997@users.noreply.github.com" },
]
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.10"

[tool.black]
line-length = 88
target-version = ['py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.github
  | \.venv
  | docs
  | third_party
  | scratch
)/
'''

[tool.ruff]
line-length = 120
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I",
]
exclude = ["third_party", ".venv"]
ignore = ["F841", "E501", "E741", "I001"]

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]

[tool.ruff.isort]
known-first-party = ["cdax"]
force-single-line = true
single-line-exclusions = ["typing"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pyright]
include = ["repepo"]
exclude = ["**/node_modules", "**/__pycache__", "repepo/repe"]

reportMissingImports = true
reportMissingTypeStubs = false
useLibraryCodeForTypes = true
typeCheckingMode = "basic"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
