[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "repepo"
version = "0.1.0"
authors = [
  { name = "Daniel C.H. Tan", email = "dtch1997@users.noreply.github.com" },
]
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.10,<4.0"
dependencies = [
    "pyrallis>=0.3.1",
    "wandb>=0.16.0",
    "transformers>=4.35.2",
    "torch>=2.1.1",
    "datasets>=2.15.0",
    "numpy>=1.26.2",
    "accelerate>=0.26.1",
    "scikit-learn>=1.3.2",
    "evaluate>=0.4.1",
    "rouge-score>=0.1.2",
    "termcolor>=2.4.0",
    "bitsandbytes>=0.42.0",
    "nbdime>=4.0.1",
    "steering-vectors>=0.3.0",
    "openai>=1.10.0",
    "arrr>=1.0.4",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.github
  | \.venv
  | docs
  | third_party
  | scratch
)/
'''

[tool.ruff]
line-length = 88
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I",
]
exclude = ["third_party", ".venv"]
ignore = ["F841", "E501", "E741", "I001"]

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]

[tool.ruff.isort]
known-first-party = ["cdax"]
force-single-line = true
single-line-exclusions = ["typing"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["repepo"]
exclude = ["**/node_modules", "**/__pycache__", "repepo/repe"]

reportMissingImports = true
reportMissingTypeStubs = false
useLibraryCodeForTypes = true
typeCheckingMode = "basic"
reportPrivateImportUsage = "none"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[tool.pdm.dev-dependencies]
dev = [
    "notebook>=7.0.6",
    "ipykernel>=6.27.1",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
    "ffmpeg>=1.4",
    "pytest>=7.4.3",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "pyright>=1.1.338",
    "jupyter>=1.0.0",
    "pre-commit>=3.5.0",
    "syrupy>=4.6.0",
    "pyright>=1.1.339",
]
